@@ -22,3 +22,6 @@ Probar en diferentes sistemas:
 --Fin lectura mando analógico, como un volante
 
 ---------------------
+
+en mapa aventura, dibujito para direcciones entrar/salir.
+-probar con aventura generada
